tests/mm0_mmu/fail/bad-sort2143.mmu
-- bad modifier order
(sort s2143 strict pure free provable)